Fixed the projects being off-center by 10px

--- a/portfolio-website/src/css/project.css
+++ b/portfolio-website/src/css/project.css
@@ -6,6 +6,7 @@
   min-height: 440px;
   border-radius: 12px;
   box-shadow: 10px 10px 0px rgba(0, 0, 0, 0.835);
+  margin-right: 10px;
   border: 4px solid black;
   text-align: center;
   margin-bottom: 50px;
